# ogl-qt

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Camera.cpp  Doxyfile  Gizmo.cpp  Gizmo.hpp  OpenGLWindow.cpp  README.md  TriangleWindow.cpp  main.cpp  ogl-qt.sln  ogl-qt.vcxproj  ogl-qt.vcxproj.filters  oglqt.cpp  oglqt.h  oglqt.qrc  oglqt.ui  pass_through.vert  uniform_color.frag
.github/workflows/: build.yml  doxygen-build.yml  doxygen-deploy.yml  doxygen.yml  linux-build.yml  linux-latest-gcc.yml  windows-build.yml  windows-lastest-debug-mingw.yml  windows-lastest-release.yml  windows-latest-mingw.yml  windows-latest-msvc.yml
include/: App3D.hpp  App3DViewer.hpp  Camera.hpp  Geometry.hpp  HUD.hpp  MainWindow.cpp  MainWindow.hpp  Mesh.hpp  Model.hpp  OpenGLWindow.hpp  PickingTexture.hpp  RectangleWindow.hpp  Renderable.hpp  RenderingWindow.hpp  Scene.hpp  SceneManager.hpp  SceneObject.hpp  SceneViewer.hpp  Shader.hpp  TriangleWindow.hpp  Utils.hpp  Vertex.hpp
includes/: MainWindow.cpp  RectangleWindow.hpp
lib/include/assimp/: revision.h
lib/src/: stb_loader.cpp
resources/models/backpack/: backpack2.mtl
resources/models/ground/: ground.mtl
resources/shaders/: font.vs  light.fs  pickcolor.fs  texture.fs  texture.vs  unicolor - Copy.vs  unicolor.fs  unicolor.vs
shaders/: font.fs  light.fs  pass_through.vert  texture.frag  texture.fs  texture.vert  texture.vs  uni_color_green.fs  unicolor.fs  unicolor.vs  uniform_color.frag
src/: App3D.cpp  App3D.hpp  App3DViewer.cpp  App3DViewer.hpp  App3DViewer.ui  CMakeLists.txt  Camera.cpp  Camera.hpp  Geometry.cpp  Gizmo.cpp  Gizmo.hpp  HUD.cpp  HUD.hpp  Light.cpp  Light.hpp  LightObject.cpp  LightObject.hpp  LightProperties.cpp  LightProperties.hpp  MainWindow.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PickingTexture.cpp  PickingTexture.hpp  RectangleWindow.cpp  Renderable.cpp  RenderingWindow.cpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneObject.cpp  SceneObject.hpp  SceneViewer.cpp  SceneViewer.hpp  Shader.cpp  Shader.hpp  Utils.cpp  Utils.hpp  (+4 more)
tests/: smoke_test.cpp
